<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_lightning_24"
        android:title="@string/nav_home_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_running"
        android:icon="@drawable/ic_shoes_24"
        android:title="@string/nav_running_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_leaderboard_24"
        android:title="@string/nav_history_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/nav_profile_title"
        app:showAsAction="ifRoom" />
</menu>