<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:navigationIcon="@drawable/ic_back_24">

            <TextView
                android:id="@+id/tv_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pretendard_variable"
                android:text="@string/party_detail"
                android:textColor="@color/gray_90"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tv_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/tv_party_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/pretendard_variable"
                        android:text="@string/party_title_unknown"
                        android:textColor="@color/gray_90"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_party_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23dp"
                        android:layout_marginEnd="38dp"
                        android:fontFamily="@font/pretendard_variable"
                        android:text="@string/party_description_unknown"
                        android:textColor="@color/gray_90"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@color/gray_5" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/pretendard_variable"
                        android:text="@string/party_location_unknown"
                        android:textColor="@color/gray_50"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/ic_location_grey_16" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/pretendard_variable"
                        android:text="@string/party_time_unknown"
                        android:textColor="@color/gray_50"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/ic_clock_grey_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="24dp"
                        android:background="@color/gray_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:layout_marginBottom="28dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_party_difficulty"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/difficulty_newbie"
                                android:textColor="@color/active_green"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_difficulty"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/difficulty"
                                android:textColor="@color/gray_40"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_party_pace"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pace_unknown"
                                android:textColor="@color/gray_90"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_pace"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/pace"
                                android:textColor="@color/gray_40"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_party_require_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time_required_unknown"
                                android:textColor="@color/gray_90"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_require_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/time_required"
                                android:textColor="@color/gray_40"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/gray_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/party_owner"
                        android:textColor="@color/gray_90"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/civ_party_owner"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/img_thumbnail_unknown"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="0dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_party_owner_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/pretendard_variable"
                                android:text="@string/member_name_unknown"
                                android:textColor="@color/gray_90"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_party_owner_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/pretendard_variable"
                                android:text="@string/member_description_blank"
                                android:textColor="@color/gray_40"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/gray_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <LinearLayout
                        android:id="@+id/ll_party_member_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/tv_party_member_header"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/party_member"
                            android:textColor="@color/gray_90"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/ll_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_current_member_cnt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2"
                                android:textColor="@color/primary_2"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_total_member_cnt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="6.75dp"
                                android:text="/4"
                                android:textColor="@color/gray_70"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_more_party_detail"
                                tools:ignore="ContentDescription" />

                        </LinearLayout>

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_party_member"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp" />

                        <LinearLayout
                            android:id="@+id/ll_dummy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="invisible">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/civ_party_member"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/img_thumbnail_unknown"
                                app:civ_border_color="@color/white"
                                app:civ_border_width="0dp" />

                            <TextView
                                android:id="@+id/tv_member_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/member_name_unknown"
                                android:textColor="@color/gray_70"
                                android:textSize="13sp" />


                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primary_2"
            android:fontFamily="@font/pretendard_variable"
            android:gravity="center"
            android:text="@string/join_party"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>